# hyperagent-replay

./: README.md  __init__.py  batch_extract.py  batch_replay.py  evaluate.py  extract.py  pyproject.toml  replay.py  replay_skip_list.txt
evals/: astropy__astropy-12907_human.eval.json
extracted/: astropy__astropy-14365_human.extracted.json  astropy__astropy-7746_human.extracted.json  extract_manifest.json  matplotlib__matplotlib-23299_human.extracted.json  matplotlib__matplotlib-23563_human.extracted.json  matplotlib__matplotlib-24265_human.extracted.json  mwaskom__seaborn-3407_human.extracted.json  pallets__flask-4992_human.extracted.json  psf__requests-2317_human.extracted.json  scikit-learn__scikit-learn-15535_human.extracted.json  scikit-learn__scikit-learn-25570_human.extracted.json  (+1 more)
extracted-two/: astropy__astropy-12907_human.extracted.json  astropy__astropy-6938_human.extracted.json  django__django-10924_human.extracted.json  django__django-11179_human.extracted.json  django__django-11742_human.extracted.json  extract_manifest.json  matplotlib__matplotlib-18869_human.extracted.json  matplotlib__matplotlib-24334_human.extracted.json  matplotlib__matplotlib-25433_human.extracted.json  mwaskom__seaborn-2848_human.extracted.json  pallets__flask-5063_human.extracted.json  psf__requests-1963_human.extracted.json  pydata__xarray-4493_human.extracted.json  pylint-dev__pylint-6506_human.extracted.json  pytest-dev__pytest-7168_human.extracted.json  scikit-learn__scikit-learn-10508_human.extracted.json  scikit-learn__scikit-learn-13439_human.extracted.json
(+59 files in other folders)
